--- a/package.json
+++ b/package.json
@@ -1,85 +1,92 @@
 {
-    "$schema": "https://json.schemastore.org/package.json",
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "build": "vite build",
-        "dev": "vite"
-    },
-    "devDependencies": {
-        "@tailwindcss/vite": "^4.0.0",
-        "axios": "^1.11.0",
-        "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^2.0.0",
-        "tailwindcss": "^4.0.0",
-        "vite": "^7.0.4"
-    },
-    "dependencies": {
-        "@chenfengyuan/vue-countdown": "^2.1.3",
-        "@fullcalendar/daygrid": "^6.1.19",
-        "@fullcalendar/interaction": "^6.1.19",
-        "@fullcalendar/rrule": "^6.1.19",
-        "@fullcalendar/timegrid": "^6.1.19",
-        "@fullcalendar/vue3": "^6.1.19",
-        "@inertiajs/inertia": "^0.11.1",
-        "@inertiajs/vue3": "^2.0.17",
-        "@mdi/font": "^7.4.47",
-        "@tsparticles/vue3": "^3.0.1",
-        "@vitejs/plugin-vue": "^6.0.1",
-        "@vue-leaflet/vue-leaflet": "^0.10.1",
-        "@vuepic/vue-datepicker": "^11.0.2",
-        "@yaireo/tagify": "^4.35.3",
-        "bootstrap": "^5.3.7",
-        "chart.js": "^3.1.0",
-        "dayjs": "^1.11.13",
-        "dropzone-vue": "^0.1.11",
-        "filepond-plugin-file-validate-type": "^1.2.9",
-        "filepond-plugin-image-preview": "^4.6.12",
-        "form-wizard-vue3": "^1.1.0",
-        "glob": "^11.0.3",
-        "isotope-layout": "^3.0.6",
-        "jquery": "^3.7.1",
-        "jsvectormap": "^1.7.0",
-        "lg-pager": "^1.0.2",
-        "lg-thumbnail": "^1.2.1",
-        "lg-zoom": "^1.3.0",
-        "lightgallery": "^2.9.0-beta.1",
-        "maska": "^3.2.0",
-        "moment": "^2.30.1",
-        "photoswipe": "^5.4.4",
-        "pinia": "^3.0.3",
-        "sass": "^1.90.0",
-        "simplebar-vue": "^2.4.2",
-        "sortablejs-vue3": "^1.2.11",
-        "swiper": "^11.2.10",
-        "tsparticles": "^3.9.1",
-        "vee-validate": "^4.15.1",
-        "vue": "^3.5.18",
-        "vue-3-slider-component": "^1.0.2",
-        "vue-chart-3": "^3.1.8",
-        "vue-countup-v3": "^1.4.2",
-        "vue-draggable-next": "^2.2.1",
-        "vue-echarts": "^7.0.3",
-        "vue-filepond": "^7.0.4",
-        "vue-multiselect": "^3.3.1",
-        "vue-router": "^4.5.1",
-        "vue-slider-component": "^4.1.0-beta.7",
-        "vue-sweetalert2": "^5.0.11",
-        "vue3-apexcharts": "^1.8.0",
-        "vue3-carousel": "^0.16.0",
-        "vue3-colorpicker": "^2.3.0",
-        "vue3-easy-data-table": "^1.5.47",
-        "vue3-editor": "^0.1.1",
-        "vue3-emoji-picker": "^1.1.8",
-        "vue3-flip-countdown": "^0.1.6",
-        "vue3-google-map": "^0.23.1",
-        "vue3-particles": "^2.12.0",
-        "vue3-perfect-scrollbar": "^2.0.0",
-        "vue3-select2": "^0.2.0",
-        "vue3-star-ratings": "^3.0.5",
-        "vue3-toastify": "^0.2.8",
-        "vue3-tour": "^1.0.3",
-        "vuejs-smart-table": "^1.0.0-beta.6",
-        "vuetify": "^3.9.4"
-    }
+  "$schema": "https://json.schemastore.org/package.json",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "build": "vite build",
+    "dev": "vite",
+    "lint": "eslint --ext .js,.vue resources/js",
+    "format": "prettier --write \"resources/js/**/*.{js,vue,ts,json,css,scss}\""
+  },
+  "devDependencies": {
+    "@tailwindcss/vite": "^4.0.0",
+    "axios": "^1.11.0",
+    "concurrently": "^9.0.1",
+    "eslint": "^9.37.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-vue": "^10.5.0",
+    "laravel-vite-plugin": "^2.0.0",
+    "prettier": "^3.6.2",
+    "tailwindcss": "^4.0.0",
+    "vite": "^7.0.4"
+  },
+  "dependencies": {
+    "@chenfengyuan/vue-countdown": "^2.1.3",
+    "@fullcalendar/daygrid": "^6.1.19",
+    "@fullcalendar/interaction": "^6.1.19",
+    "@fullcalendar/rrule": "^6.1.19",
+    "@fullcalendar/timegrid": "^6.1.19",
+    "@fullcalendar/vue3": "^6.1.19",
+    "@inertiajs/inertia": "^0.11.1",
+    "@inertiajs/vue3": "^2.0.17",
+    "@mdi/font": "^7.4.47",
+    "@tsparticles/vue3": "^3.0.1",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "@vue-leaflet/vue-leaflet": "^0.10.1",
+    "@vuepic/vue-datepicker": "^11.0.2",
+    "@yaireo/tagify": "^4.35.3",
+    "bootstrap": "^5.3.7",
+    "chart.js": "^3.1.0",
+    "dayjs": "^1.11.13",
+    "dropzone-vue": "^0.1.11",
+    "filepond-plugin-file-validate-type": "^1.2.9",
+    "filepond-plugin-image-preview": "^4.6.12",
+    "form-wizard-vue3": "^1.1.0",
+    "glob": "^11.0.3",
+    "isotope-layout": "^3.0.6",
+    "jquery": "^3.7.1",
+    "jsvectormap": "^1.7.0",
+    "lg-pager": "^1.0.2",
+    "lg-thumbnail": "^1.2.1",
+    "lg-zoom": "^1.3.0",
+    "lightgallery": "^2.9.0-beta.1",
+    "maska": "^3.2.0",
+    "moment": "^2.30.1",
+    "photoswipe": "^5.4.4",
+    "pinia": "^3.0.3",
+    "sass": "^1.90.0",
+    "simplebar-vue": "^2.4.2",
+    "sortablejs-vue3": "^1.2.11",
+    "swiper": "^11.2.10",
+    "tsparticles": "^3.9.1",
+    "vee-validate": "^4.15.1",
+    "vue": "^3.5.18",
+    "vue-3-slider-component": "^1.0.2",
+    "vue-chart-3": "^3.1.8",
+    "vue-countup-v3": "^1.4.2",
+    "vue-draggable-next": "^2.2.1",
+    "vue-echarts": "^7.0.3",
+    "vue-filepond": "^7.0.4",
+    "vue-multiselect": "^3.3.1",
+    "vue-router": "^4.5.1",
+    "vue-slider-component": "^4.1.0-beta.7",
+    "vue-sweetalert2": "^5.0.11",
+    "vue3-apexcharts": "^1.8.0",
+    "vue3-carousel": "^0.16.0",
+    "vue3-colorpicker": "^2.3.0",
+    "vue3-easy-data-table": "^1.5.47",
+    "vue3-editor": "^0.1.1",
+    "vue3-emoji-picker": "^1.1.8",
+    "vue3-flip-countdown": "^0.1.6",
+    "vue3-google-map": "^0.23.1",
+    "vue3-particles": "^2.12.0",
+    "vue3-perfect-scrollbar": "^2.0.0",
+    "vue3-select2": "^0.2.0",
+    "vue3-star-ratings": "^3.0.5",
+    "vue3-toastify": "^0.2.8",
+    "vue3-tour": "^1.0.3",
+    "vuejs-smart-table": "^1.0.0-beta.6",
+    "vuetify": "^3.9.4"
+  }
 }
