--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "build": "vite build",
     "dev": "vite",
-    "lint": "eslint --ext .js,.vue resources/js",
+    "lint": "eslint \"resources/js/**/*.{js,vue}\"",
     "format": "prettier --write \"resources/js/**/*.{js,vue,ts,json,css,scss}\""
   },
   "devDependencies": {
+    "@eslint/js": "^9.37.0",
     "@tailwindcss/vite": "^4.0.0",
     "axios": "^1.11.0",
     "concurrently": "^9.0.1",
@@ -16,6 +17,7 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-vue": "^10.5.0",
+    "globals": "^16.4.0",
     "laravel-vite-plugin": "^2.0.0",
     "prettier": "^3.6.2",
     "tailwindcss": "^4.0.0",
