--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "build": "vite build",
     "dev": "vite",
     "lint": "eslint \"resources/js/**/*.{js,vue}\"",
+    "lint:fix": "eslint \"resources/js/**/*.{js,vue}\" --fix",
     "format": "prettier --write \"resources/js/**/*.{js,vue,ts,json,css,scss}\""
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.28.4",
     "@eslint/js": "^9.37.0",
     "@tailwindcss/vite": "^4.0.0",
     "axios": "^1.11.0",
@@ -21,7 +23,8 @@
     "laravel-vite-plugin": "^2.0.0",
     "prettier": "^3.6.2",
     "tailwindcss": "^4.0.0",
-    "vite": "^7.0.4"
+    "vite": "^7.0.4",
+    "vue-eslint-parser": "^10.2.0"
   },
   "dependencies": {
     "@chenfengyuan/vue-countdown": "^2.1.3",
