chore(dev): optimize code formatting workflow and documentation accuracy
Remove verbose flag from pint formatter to reduce console noise during
development. Update route file comments to correctly reference Vue
components instead of React for better code clarity.

--- a/composer.json
+++ b/composer.json
@@ -61,7 +61,7 @@
       "@php artisan config:clear --ansi",
       "@php artisan test"
     ],
-    "pint": "./vendor/bin/pint -v"
+    "pint": "./vendor/bin/pint"
   },
   "extra": {
     "laravel": {
