--- a/package.json
+++ b/package.json
@@ -3,30 +3,31 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "vite build",
     "dev": "vite",
+    "build": "vite build",
     "lint": "eslint \"resources/**/*.{js,vue}\"",
     "lint:fix": "eslint \"resources/**/*.{js,vue}\" --fix",
     "format": "prettier --write \"resources/**/*.{js,vue,ts,json,css,scss}\""
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.28.4",
-    "@eslint/js": "^9.37.0",
+    "@babel/eslint-parser": "^7.25.9",
+    "@eslint/js": "^9.14.0",
     "@tailwindcss/vite": "^4.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.45.0",
-    "@typescript-eslint/parser": "^8.45.0",
+    "@typescript-eslint/eslint-plugin": "^8.13.0",
+    "@typescript-eslint/parser": "^8.13.0",
     "axios": "^1.11.0",
     "concurrently": "^9.0.1",
-    "eslint": "^9.37.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.4",
-    "eslint-plugin-vue": "^10.5.0",
-    "globals": "^16.4.0",
-    "laravel-vite-plugin": "^2.0.0",
-    "prettier": "^3.6.2",
+    "eslint": "^9.14.0",
+    "eslint-config-prettier": "^10.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-vue": "^9.31.0",
+    "globals": "^15.9.0",
+    "laravel-vite-plugin": "^1.0.5",
+    "prettier": "^3.3.3",
     "tailwindcss": "^4.0.0",
     "vite": "^7.0.4",
-    "vue-eslint-parser": "^10.2.0"
+    "vue-eslint-parser": "^9.4.3"
   },
   "dependencies": {
     "@chenfengyuan/vue-countdown": "^2.1.3",
@@ -44,7 +45,7 @@
     "@vuepic/vue-datepicker": "^11.0.2",
     "@yaireo/tagify": "^4.35.3",
     "bootstrap": "^5.3.7",
-    "chart.js": "^3.1.0",
+    "chart.js": "^3.9.1",
     "dayjs": "^1.11.13",
     "dropzone-vue": "^0.1.11",
     "filepond-plugin-file-validate-type": "^1.2.9",
@@ -62,7 +63,7 @@
     "moment": "^2.30.1",
     "photoswipe": "^5.4.4",
     "pinia": "^3.0.3",
-    "sass": "^1.90.0",
+    "sass": "^1.78.0",
     "simplebar-vue": "^2.4.2",
     "sortablejs-vue3": "^1.2.11",
     "swiper": "^11.2.10",
