--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,16 @@
   "license": "MIT",
   "require": {
     "php": "^8.2",
+    "barryvdh/laravel-dompdf": "^3.1",
     "inertiajs/inertia-laravel": "^2.0",
+    "laravel/fortify": "^1.31",
     "laravel/framework": "^12.0",
-    "laravel/tinker": "^2.10.1"
+    "laravel/sanctum": "^4.2",
+    "laravel/tinker": "^2.10.1",
+    "maatwebsite/excel": "^3.1",
+    "spatie/laravel-activitylog": "^4.10",
+    "spatie/laravel-medialibrary": "^11.17",
+    "spatie/laravel-permission": "^6.23"
   },
   "require-dev": {
     "barryvdh/laravel-debugbar": "^3.16",
