--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-vue": "^9.31.0",
     "globals": "^15.9.0",
-    "laravel-vite-plugin": "^1.0.5",
+    "laravel-vite-plugin": "^2.0.1",
     "prettier": "^3.3.3",
     "tailwindcss": "^4.0.0",
-    "vite": "^7.0.4",
+    "vite": "^7.2.2",
     "vue-eslint-parser": "^9.4.3"
   },
   "dependencies": {
@@ -36,8 +36,8 @@
     "@fullcalendar/rrule": "^6.1.19",
     "@fullcalendar/timegrid": "^6.1.19",
     "@fullcalendar/vue3": "^6.1.19",
-    "@inertiajs/inertia": "^0.11.1",
-    "@inertiajs/vue3": "^2.0.17",
+    "@inertiajs/core": "^2.2.16",
+    "@inertiajs/vue3": "^2.2.16",
     "@mdi/font": "^7.4.47",
     "@tsparticles/vue3": "^3.0.1",
     "@vitejs/plugin-vue": "^6.0.1",
@@ -63,7 +63,7 @@
     "moment": "^2.30.1",
     "photoswipe": "^5.4.4",
     "pinia": "^3.0.3",
-    "sass": "^1.78.0",
+    "sass": "^1.94.0",
     "simplebar-vue": "^2.4.2",
     "sortablejs-vue3": "^1.2.11",
     "swiper": "^11.2.10",
@@ -84,7 +84,6 @@
     "vue3-carousel": "^0.16.0",
     "vue3-colorpicker": "^2.3.0",
     "vue3-easy-data-table": "^1.5.47",
-    "vue3-editor": "^0.1.1",
     "vue3-emoji-picker": "^1.1.8",
     "vue3-flip-countdown": "^0.1.6",
     "vue3-google-map": "^0.23.1",
