--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "maatwebsite/excel": "^3.1",
     "spatie/laravel-activitylog": "^4.10",
     "spatie/laravel-medialibrary": "^11.17",
-    "spatie/laravel-permission": "^6.23"
+    "spatie/laravel-permission": "^6.23",
+    "spatie/laravel-settings": "^3.5"
   },
   "require-dev": {
     "barryvdh/laravel-debugbar": "^3.16",
